add_executable(callcc_example_1 callcc_example_1.cpp)
target_link_libraries(callcc_example_1 PRIVATE pscm)
add_executable(callcc_example_2 callcc_example_2.cpp)
target_link_libraries(callcc_example_2 PRIVATE pscm)

add_executable(unicode_example_1 unicode_example_1.cpp)
target_link_libraries(unicode_example_1 PRIVATE ICU::uc)