add_executable(callcc_example_1 callcc_example_1.cpp)
target_link_libraries(callcc_example_1 PRIVATE pscm)
add_executable(callcc_example_2 callcc_example_2.cpp)
target_link_libraries(callcc_example_2 PRIVATE pscm)

add_executable(unicode_example_1 unicode_example_1.cpp)
if (EMSCRIPTEN)
    target_link_options(unicode_example_1 PUBLIC "-sUSE_ICU=1")
    target_compile_options(unicode_example_1 PUBLIC "-sUSE_ICU=1")
else ()
    target_link_libraries(unicode_example_1 PRIVATE PkgConfig::ICU)
endif ()