add_executable(callcc_example_1 callcc_example_1.cpp)
target_link_libraries(callcc_example_1 PRIVATE pscm)
add_executable(callcc_example_2 callcc_example_2.cpp)
target_link_libraries(callcc_example_2 PRIVATE pscm)

add_executable(unicode_example_1 unicode_example_1.cpp)
if (EMSCRIPTEN)
    target_link_options(unicode_example_1 PUBLIC "-sUSE_ICU=1")
    target_compile_options(unicode_example_1 PUBLIC "-sUSE_ICU=1")
elseif (WIN32)
    find_package(icu REQUIRED i18n uc io)
    target_link_libraries(unicode_example_1 PUBLIC icu)
else ()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules (ICU REQUIRED icu-i18n icu-uc icu-io IMPORTED_TARGET)
    target_link_libraries(unicode_example_1 PUBLIC PkgConfig::ICU)
endif ()