load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

cc_binary(
    name = "pscm",
    srcs = ["pscm.cpp"],
    copts = ["-std=c++20"],
    linkopts = select({
        "@platforms//cpu:wasm32": ["-s INITIAL_MEMORY=65536000"],
        "//conditions:default": [],
    }),
    deps = ["//:pscm"],
)

wasm_cc_binary(
    name = "pscm-wasm",
    cc_target = ":pscm",
    outputs = [
        "pscm.js",
        "pscm.wasm",
    ],
)
