load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
# load("@pip_deps//:requirements.bzl", "requirement")

pybind_library(
    name = "pscm",  # This name is not actually created!
    srcs = ["pscm_python_binding.cpp"],
    visibility = ["//visibility:public"],
    deps = ["//binding/c:pscm_c_api"],
    alwayslink = 1,
)

py_library(
    name = "pscm_python_api",
    data = ["//:pypscm.so"],
)

py_binary(
    name = "pscm_python_api_example",
    srcs = ["pscm_python_api_example.py"],
    deps = [
        ":pscm_python_api",
    ],
)

py_binary(
    name = "pscm_python_api_test",
    srcs = ["pscm_python_api_test.py"],
    deps = [
        ":pscm_python_api",
        # requirement("pytest"),
    ],
)
