load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

# FIXME: -sUSE_SDL=2 -sUSE_SDL_TTF=2 not work with bazel
# cc_binary(
#     name = "krabby",
#     srcs = ["src/main.cpp"],
#     copts = [
#         "-std=c++20",
#     ],
# )

# wasm_cc_binary(
#     name = "krabby-wasm",
#     cc_target = ":krabby",
#     outputs = [
#         "krabby.js",
#         "krabby.wasm",
#     ],
# )
